--- a/done.html
+++ b/done.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h2>Takk for at du kontaktet oss, du vil høre fra oss snart.</h2>
+    <p><a href="index.html">Tilbake</a></p>
 </body>
 </html>
