--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="design.css?v=098f6bcd4621d373cade4e832627b4f6">
+    <link rel="stylesheet" href="design.css?v=666jJk8lKnmgo32jj4j6nnx421">
     <title>Ali-Trafikkskole - ali-trafikkskole.org - post@ali-trafikkskole.org - Ali Trafikkskole - OSLO</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
                 <span><a href="#kontakt">Kontakt</a></span>
             </div>
         </div>
-        <section class="banner"></section>
+        <section class="banner_container"><img src="img/bg.webp?v=666jJk8lKnmgo32jj4j6nnx421" class="banner"></section>
         <section class="flex">
             <div class="child center">
                 <h3 class="padding">Bestill</h3>
@@ -34,10 +34,10 @@
                     </form>
                 </section>
                 <div>
-                    <img src="img/taxi.jpg" class="images" />
+                    <img src="img/taxi.jpg?v=666jJk8lKnmgo32jj4j6nnx421" class="images" />
                 </div>
                 <div>
-                    <img src="img/greencar.webp" class="images" />
+                    <img src="img/greencar.webp?v=666jJk8lKnmgo32jj4j6nnx421" class="images" />
                 </div>
             </div>
             <div class="child center">
@@ -74,18 +74,18 @@
             <div class="child center">
                 <h3 class="padding">SKILTER</h3>
                 <div class="padding margin radius child_bg left">
-                    <a href="img/skilter.webp"><img src="img/skilter.webp" class="images" /></a>
+                    <a href="img/skilter.webp?v=666jJk8lKnmgo32jj4j6nnx421"><img src="img/skilter.webp?v=666jJk8lKnmgo32jj4j6nnx421" class="images" /></a>
                 </div>
             </div>
             <div class="child center">
                 <h3 class="padding">VISITKORT</h3>
                 <div class="padding margin radius child_bg left">
-                    <a href="img/visitkort.png"><img src="img/visitkort.png" class="images" /></a>
+                    <a href="img/visitkort.png?v=666jJk8lKnmgo32jj4j6nnx421"><img src="img/visitkort.png?v=666jJk8lKnmgo32jj4j6nnx421" class="images" /></a>
                 </div>
             </div>
         </section>
         <section class="bottom center" id="bottom"></section>
     </div>
-    <script src="app.js?v=098f6bcd4621d373cade4e832627b4f6"></script>
+    <script src="app.js?v=666jJk8lKnmgo32jj4j6nnx421"></script>
 </body>
 </html>
