--- a/index.html
+++ b/index.html
@@ -1,59 +1,39 @@
+
 <!DOCTYPE html>
 <html lang="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="design.css?v=666jJk8lKnmgo32jj4j6nnx421">
-    <title>Ali-Trafikkskole - ali-trafikkskole.org - post@ali-trafikkskole.org - Ali Trafikkskole - OSLO</title>
+    <link rel="stylesheet" href="design.css?v=4355a46b19d348dc2f57c046f8ef63d4538ebb936000f3c9ee954a27460dd865">
+    <title>Fliro Web Design - fliro.org</title>
 </head>
 <body>
-    <div class="container">
-        <div class="menu center flex">
-            <div class="logo child"><img src="img/logo.png" /></div>
-            <div class="links child right">
-                <span><a href="index.html">Hjem</a></span>
-                <span><a href="#kontakt">Kontakt</a></span>
+    <div>
+        <div class="menu">
+            <div class="flexnowrap">
+                <div class="a center">
+                    <img src="img/logo.png?v=9a271f2a916b0b6ee6cecb2426f0b3206ef074578be55d9bc94f6f3fe3ab86aa" style="text-align:center;margin:0 auto;" />
+                </div>
+                <div class="b center"><span class="cursor" id="btn_menu">=</span></div>
             </div>
         </div>
-        <section class="banner_container"><img src="img/bg.webp?v=666jJk8lKnmgo32jj4j6nnx421" class="banner"></section>
-        <section class="flex">
+        <section class="banner_container"><img src="img/bg.webp?v=4355a46b19d348dc2f57c046f8ef63d4538ebb936000f3c9ee954a27460dd865" class="banner"></section>
+        <section class="flexwrap">
             <div class="child center">
-                <h3 class="padding">Bestill</h3>
+                <h3 class="padding">BESTILL</h3>
                 <section class="padding margin radius child_bg">
-                    <form action="https://fliro.org/a94a8fe5ccb19ba61c4c0873d391e987982fbbd3" method="post">
+                    <form action="https://fliro.org/4355a46b19d348dc2f57c046f8ef63d4538ebb936000f3c9ee954a27460dd865" method="post">
                         <p><input type="text" id="name" placeholder="Ola Nordmann" name="name"  class="input padding radius" required></p>
                         <p><input type="text" id="email" placeholder="ola@nordmann.no" name="email" class="input padding radius" required></p>
                         <div>
                             <select name="radio" class="padding margin" required>
-                                <option value="kurs">Kurs / Opplæring</option>
-                                <option value="kjøretime">kjøretime (1 time)</option>
-                                <option value="kjøretime">kjøretime (2 timer)</option>
+                                <option value="1-time">Kjøretime (1 time)</option>
+                                <option value="2-timer">Kjøretime (2 timer)</option>
                             </select>
                         </div>
                         <p><button class="padding radius margin" id="btn">SEND INN</button></p>
                     </form>
                 </section>
-                <div>
-                    <img src="img/taxi.jpg?v=666jJk8lKnmgo32jj4j6nnx421" class="images" />
-                </div>
-                <div>
-                    <img src="img/greencar.webp?v=666jJk8lKnmgo32jj4j6nnx421" class="images" />
-                </div>
-            </div>
-            <div class="child center">
-                <h3 class="padding">ALI-TRAFIKKSKOLE</h3>
-                <div class="padding margin radius child_bg left">
-                    <p>Velkommen til vår trafikkskole i hjertet av Oslo!</p> <p>Vi er en dedikert trafikkskole som har som mål å hjelpe deg med å få førerkortet raskt, effektivt og på en trygg måte. Med våre erfarne instruktører og moderne undervisningsmetoder sørger vi for at du er godt forberedt både til teoriprøven og den praktiske førerprøven.</p> <p><strong>Hvorfor velge oss?</strong></p> <p>1. Erfarne og sertifiserte kjørelærere: Vårt team består av erfarne instruktører som har mange års erfaring med trafikkopplæring. Vi legger stor vekt på individuell tilpasning, slik at alle elever får en læringsopplevelse som passer deres behov og ferdighetsnivå.</p> <p>2. Moderne og trygge kjøretøy: Vi har en moderne bilpark som oppfyller alle sikkerhetskrav, slik at du kan føle deg trygg når du øvelseskjører med oss.</p> <p>3. Fleksible kjøretimer: Vi vet at hverdagen kan være hektisk, derfor tilbyr vi fleksible kjøretider som passer din timeplan. Enten du trenger opplæring tidlig om morgenen, på ettermiddagen eller i helgene, finner vi en tid som passer for deg.</p> <p>4. Skreddersydd opplæring: Uansett om du er nybegynner eller bare trenger oppfriskning før førerprøven, tilpasser vi opplæringen til ditt nivå og tempo.</p> <p><strong>Våre kurs og opplæringstilbud</strong></p> <p>Vi tilbyr kurs og opplæringsprogrammer for bil førekort klasse-B, inkludert:</p> <ul> <li>Grunnkurs trafikalt grunnkurs</li> <li>Teorikurs med erfarne instruktører</li> <li>Oppfriskningskurs for deg som ønsker å bli tryggere bak rattet</li> <li>Pakketilbud for intensiv opplæring</li> <li>Spesialtilbud for ungdom og studenter</li> </ul> <p><strong>Hvordan fungerer opplæringen?</strong></p> <p>Når du melder deg på hos oss, vil vi først gjennomføre en vurderingstime for å kartlegge ditt ferdighetsnivå. Deretter legger vi opp en plan som passer dine mål og ønsker. Du vil få tilgang til moderne digitale læremidler som gjør det lettere å forberede seg til teoriprøven. Våre kjøretimer er bygget opp rundt praktiske øvelser og realistiske trafikksituasjoner, slik at du er godt rustet til førerprøven.</p> <p><strong>Vi følger deg hele veien</strong></p> <p>Vårt mål er ikke bare at du skal bestå førerprøven, men også at du skal bli en trygg og ansvarsfull sjåfør. Våre instruktører gir deg kontinuerlig tilbakemelding og tips om hvordan du kan forbedre dine ferdigheter bak rattet. Vi er tilgjengelige for spørsmål og veiledning både før, under og etter kjøretimene.</p> <p><strong>Kontakt oss i dag!</strong></p> <p>Har du spørsmål eller ønsker å melde deg på et kurs? Ikke nøl med å ta kontakt. Du kan ringe oss eller sende en e-post, så hjelper vi deg i gang på veien mot førerkortet.</p>
-                </div>
-            </div>
-            <div class="child center">
-                <h3 class="padding" id="kontakt">KONTAKT</h3>
-                <div class="padding margin radius child_bg center">
-                    <p>&#9742;</p>
-                    <p>91 92 94 12</p>
-                    <p>&#9993;</p>
-                    <p>post@ali-trafikkskole.org</p>
-                </div>
             </div>
             <div class="child center">
                 <h3 class="padding">VI TILBYR</h3>
@@ -72,20 +52,29 @@
                 </div>
             </div>
             <div class="child center">
-                <h3 class="padding">SKILTER</h3>
+                <h3 class="padding">OM OSS</h3>
                 <div class="padding margin radius child_bg left">
-                    <a href="img/skilter.webp?v=666jJk8lKnmgo32jj4j6nnx421"><img src="img/skilter.webp?v=666jJk8lKnmgo32jj4j6nnx421" class="images" /></a>
+                    <p>Velkommen til vår trafikkskole i hjertet av Oslo!</p> <p>Vi er en dedikert trafikkskole som har som mål å hjelpe deg med å få førerkortet raskt, effektivt og på en trygg måte. Med våre erfarne instruktører og moderne undervisningsmetoder sørger vi for at du er godt forberedt både til teoriprøven og den praktiske førerprøven.</p> <p><strong>Hvorfor velge oss?</strong></p> <p>1. Erfarne og sertifiserte kjørelærere: Vårt team består av erfarne instruktører som har mange års erfaring med trafikkopplæring. Vi legger stor vekt på individuell tilpasning, slik at alle elever får en læringsopplevelse som passer deres behov og ferdighetsnivå.</p> <p>2. Moderne og trygge kjøretøy: Vi har en moderne bilpark som oppfyller alle sikkerhetskrav, slik at du kan føle deg trygg når du øvelseskjører med oss.</p> <p>3. Fleksible kjøretimer: Vi vet at hverdagen kan være hektisk, derfor tilbyr vi fleksible kjøretider som passer din timeplan. Enten du trenger opplæring tidlig om morgenen, på ettermiddagen eller i helgene, finner vi en tid som passer for deg.</p> <p>4. Skreddersydd opplæring: Uansett om du er nybegynner eller bare trenger oppfriskning før førerprøven, tilpasser vi opplæringen til ditt nivå og tempo.</p> <p><strong>Våre kurs og opplæringstilbud</strong></p> <p>Vi tilbyr kurs og opplæringsprogrammer for bil førekort klasse-B, inkludert:</p> <ul> <li>Grunnkurs trafikalt grunnkurs</li> <li>Teorikurs med erfarne instruktører</li> <li>Oppfriskningskurs for deg som ønsker å bli tryggere bak rattet</li> <li>Pakketilbud for intensiv opplæring</li> <li>Spesialtilbud for ungdom og studenter</li> </ul> <p><strong>Hvordan fungerer opplæringen?</strong></p> <p>Når du melder deg på hos oss, vil vi først gjennomføre en vurderingstime for å kartlegge ditt ferdighetsnivå. Deretter legger vi opp en plan som passer dine mål og ønsker. Du vil få tilgang til moderne digitale læremidler som gjør det lettere å forberede seg til teoriprøven. Våre kjøretimer er bygget opp rundt praktiske øvelser og realistiske trafikksituasjoner, slik at du er godt rustet til førerprøven.</p> <p><strong>Vi følger deg hele veien</strong></p> <p>Vårt mål er ikke bare at du skal bestå førerprøven, men også at du skal bli en trygg og ansvarsfull sjåfør. Våre instruktører gir deg kontinuerlig tilbakemelding og tips om hvordan du kan forbedre dine ferdigheter bak rattet. Vi er tilgjengelige for spørsmål og veiledning både før, under og etter kjøretimene.</p> <p><strong>Kontakt oss i dag!</strong></p> <p>Har du spørsmål eller ønsker å melde deg på et kurs? Ikke nøl med å ta kontakt. Du kan ringe oss eller sende en e-post, så hjelper vi deg i gang på veien mot førerkortet.</p>
+                </div>
+            </div>
+            <div class="child center" id="kontakt">
+                <h3 class="padding">KONTAKT</h3>
+                <div class="padding margin radius child_bg center">
+                    <p>&#9742;</p>
+                    <p>91 92 94 12</p>
+                    <p>&#9993;</p>
+                    <p>post@ali-trafikkskole.org</p>
                 </div>
             </div>
             <div class="child center">
                 <h3 class="padding">VISITKORT</h3>
-                <div class="padding margin radius child_bg left">
-                    <a href="img/visitkort.png?v=666jJk8lKnmgo32jj4j6nnx421"><img src="img/visitkort.png?v=666jJk8lKnmgo32jj4j6nnx421" class="images" /></a>
+                <div class="padding margin radius child_bg center">
+                    <img src="img/visitkort.png" style="margin:0 auto" />
                 </div>
             </div>
         </section>
         <section class="bottom center" id="bottom"></section>
     </div>
-    <script src="app.js?v=666jJk8lKnmgo32jj4j6nnx421"></script>
+    <script src="app.js?v=4355a46b19d348dc2f57c046f8ef63d4538ebb936000f3c9ee954a27460dd865"></script>
 </body>
 </html>
