--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="design.css?v=4355a46b19d348dc2f57c046f8ef63d4538ebb936000f3c9ee954a27460dd865">
-    <title>Fliro Web Design - fliro.org</title>
+    <link rel="stylesheet" href="design.css?v=4355a46b19d348dc2f57c0234538ebb936000f3c9ee954a27460dd865">
+    <title>Ali Trafikkskole - www.ali-trafikkskole.org</title>
 </head>
 <body>
     <div>
         <div class="menu">
             <div class="flexnowrap">
                 <div class="a center">
-                    <img src="img/logo.png?v=9a271f2a916b0b6ee6cecb2426f0b3206ef074578be55d9bc94f6f3fe3ab86aa" style="text-align:center;margin:0 auto;" />
+                    <img src="img/logo.png?v=4355a46b19d348dc2f57c0234538ebb936000f3c9ee954a27460dd865" style="text-align:center;margin:0 auto;" />
                 </div>
                 <div class="b center"><span class="cursor" id="btn_menu">=</span></div>
             </div>
         </div>
-        <section class="banner_container"><img src="img/bg.webp?v=4355a46b19d348dc2f57c046f8ef63d4538ebb936000f3c9ee954a27460dd861" class="banner"></section>
+        <section class="banner_container"><img src="img/bg.webp?v=4355a46b19d348dc2f57c0234538ebb936000f3c9ee954a27460dd865" class="banner"></section>
         <section class="flexwrap">
             <div class="child center">
                 <h3 class="padding">BESTILL</h3>
@@ -69,12 +69,12 @@
             <div class="child center">
                 <h3 class="padding">VISITKORT</h3>
                 <div class="padding margin radius child_bg center">
-                    <img src="img/visitkort.png" style="margin:0 auto" />
+                    <img src="img/visitkort.png?v=4355a46b19d348dc2f57c0234538ebb936000f3c9ee954a27460dd865" style="margin:0 auto; width:90%;" />
                 </div>
             </div>
         </section>
         <section class="bottom center" id="bottom"></section>
     </div>
-    <script src="app.js?v=4355a46b19d348dc2f57c046f8ef63d4538ebb936000f3c9ee954a27460dd865"></script>
+    <script src="app.js?v=4355a46b19d348dc2f57c0234538ebb936000f3c9ee954a27460dd865"></script>
 </body>
 </html>
