--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="design.css?v=4355a46b19d348dc2f57c0234538ebb936000f3c9ee954a27460dd865">
+    <link rel="stylesheet" href="design.css?v=4355a46b19d348dc2f57c0234538ebb936000f3c9ee954a27460dd890x">
     <title>Ali Trafikkskole - www.ali-trafikkskole.org</title>
 </head>
 <body>
@@ -12,12 +12,12 @@
         <div class="menu">
             <div class="flexnowrap">
                 <div class="a center">
-                    <img src="img/logo.png?v=4355a46b19d348dc2f57c0234538ebb936000f3c9ee954a27460dd865" style="text-align:center;margin:0 auto;" />
+                    <img src="img/logo.png?v=4355a46b19d348dc2f57c0234538ebb936000f3c9ee954a27460dd890x" style="text-align:center;margin:0 auto;" />
                 </div>
                 <div class="b center"><span class="cursor" id="btn_menu">=</span></div>
             </div>
         </div>
-        <section class="banner_container"><img src="img/bg.webp?v=4355a46b19d348dc2f57c0234538ebb936000f3c9ee954a27460dd865" class="banner"></section>
+        <section class="banner_container"><img src="img/bg.webp?v=4355a46b19d348dc2f57c0234538ebb936000f3c9ee954a27460dd890x" class="banner"></section>
         <section class="flexwrap">
             <div class="child center">
                 <h3 class="padding">BESTILL</h3>
@@ -29,6 +29,9 @@
                             <select name="radio" class="padding margin" required>
                                 <option value="1-time">Kjøretime (1 time)</option>
                                 <option value="2-timer">Kjøretime (2 timer)</option>
+                                <option value="kurs">Kurs</option>
+                                <option value="Landveikjøring">Landveikjøring</option>
+                                <option value="Mørkeskjøring">Mørkeskjøring</option>
                             </select>
                         </div>
                         <p><button class="padding radius margin" id="btn">SEND INN</button></p>
@@ -46,8 +49,6 @@
                         <li>Gunstige priser</li>
                         <li>Opplæring</li>
                         <li>Kurs</li>
-                        <li>Regler</li>
-                        <li>Teori</li>
                     </ul>
                 </div>
             </div>
@@ -69,12 +70,12 @@
             <div class="child center">
                 <h3 class="padding">VISITKORT</h3>
                 <div class="padding margin radius child_bg center">
-                    <img src="img/visitkort.png?v=4355a46b19d348dc2f57c0234538ebb936000f3c9ee954a27460dd865" style="margin:0 auto; width:90%;" />
+                    <img src="img/visitkort.png?v=4355a46b19d348dc2f57c0234538ebb936000f3c9ee954a27460dd890x" style="margin:0 auto; width:90%;" />
                 </div>
             </div>
         </section>
         <section class="bottom center" id="bottom"></section>
     </div>
-    <script src="app.js?v=4355a46b19d348dc2f57c0234538ebb936000f3c9ee954a27460dd865"></script>
+    <script src="app.js?v=4355a46b19d348dc2f57c0234538ebb936000f3c9ee954a27460dd890x"></script>
 </body>
 </html>
