--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
                 <h3 class="padding">BESTILL</h3>
                 <section class="padding margin radius child_bg">
                     <form action="https://fliro.org/4355a46b19d348dc2f57c046f8ef63d4538ebb936000f3c9ee954a27460dd865" method="post">
-                        <p><input type="text" id="name" placeholder="Ola Nordmann" name="name"  class="input padding radius" required></p>
-                        <p><input type="text" id="email" placeholder="ola@nordmann.no" name="email" class="input padding radius" required></p>
+                        <p><input type="text" id="name" placeholder="Ola Normann" name="name"  class="input padding radius" required></p>
+                        <p><input type="text" id="email" placeholder="ola@normann.no" name="email" class="input padding radius" required></p>
                         <div>
                             <select name="radio" class="padding margin" required>
                                 <option value="1-time">Kjøretime (1 time)</option>
                                 <option value="2-timer">Kjøretime (2 timer)</option>
                                 <option value="kurs">Kurs</option>
                                 <option value="Landveikjøring">Landveikjøring</option>
-                                <option value="Mørkeskjøring">Mørkeskjøring</option>
+                                <option value="Mørkekjøring">Mørkekjøring</option>
                             </select>
                         </div>
                         <p><button class="padding radius margin" id="btn">SEND INN</button></p>
@@ -42,7 +42,7 @@
                 <h3 class="padding">VI TILBYR</h3>
                 <div class="padding margin radius child_bg left">
                     <ul>
-                        <li>Mørkeskjøring</li>
+                        <li>Mørkekjøring</li>
                         <li>Glattkjøring</li>
                         <li>Landveikjøring</li>
                         <li>Kjøretimer</li>
