--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 Velkommen til www.ali-trafikkskole.org
-<a href="mailto:ali@ali-trafikkskole.org">kundeservice@fliro.org</a>
+<a href="mailto:kundeservice@fliro.org">kontakt oss</a>
