--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-Velkommen til www.ali-trafikkskole.org
-<a href="mailto:kundeservice@fliro.org">kontakt oss</a>
+<h3>Velkommen til www.ali-trafikkskole.org</h3>
+<p><a href="mailto:kundeservice@fliro.org">kontakt oss</a></p>
